--- a/index.html
+++ b/index.html
@@ -5,18 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cynergy Pitch Deck</title>
     <style>
+        /* Ensure the PDF takes full height and width, with responsiveness for mobile */
         body, html {
             margin: 0;
+            padding: 0;
             height: 100%;
             overflow: hidden;
         }
+        .pdf-container {
+            position: relative;
+            width: 100%;
+            height: 100vh; /* Full viewport height */
+        }
         embed {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
+            border: none;
+        }
+
+        /* Mobile optimizations */
+        @media (max-width: 768px) {
+            .pdf-container {
+                height: 100vh; /* Full viewport height for mobile */
+            }
+            embed {
+                width: 100%;
+                height: 100vh;
+            }
         }
     </style>
 </head>
 <body>
-    <embed src="Cynergy Website PDf.pdf" type="application/pdf" />
+    <div class="pdf-container">
+        <embed src="Cynergy Website PDf.pdf" type="application/pdf" />
+    </div>
 </body>
 </html>
