--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         /* Mobile optimizations */
         @media (max-width: 768px) {
             .pdf-container {
-                height: 100%; /* Full viewport height for mobile */
+                height: auto;
             }
             embed {
-                width: 100%;
-                height: 100%;
+                width: auto;
+                height: auto;
             }
         }
     </style>
