--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
         @media (max-width: 768px) {
             .pdf-container {
                 height: auto;
+                overflow-y: scroll;
+                overflow-x: scroll;
             }
             embed {
                 width: auto;
+                overflow-y: scroll;
                 height: auto;
+                overflow-x: scroll;
             }
         }
     </style>
