--- a/index.html
+++ b/index.html
@@ -29,20 +29,17 @@
         /* Mobile optimizations */
         @media (max-width: 768px) {
             .pdf-container {
-                height: auto;
-                overflow-y: scroll;
-                overflow-x: scroll;
+                height: 100%; /* Full viewport height for mobile */
             }
             embed {
-                width: auto;
-                overflow-y: scroll;
-                height: auto;
-                overflow-x: scroll;
+                width: 100%;
+                height: 100%;
             }
         }
     </style>
 </head>
 <body>
+    <h1>Cypherash</h1>
     <div class="pdf-container">
         <embed src="Cynergy Website PDf.pdf" type="application/pdf" />
     </div>
